@@ -1,0 +1,5 @@
+#\#CIF_2.0
+data_test
+# The following key-value pair is valid one, and the second colon (':')
+# is a part of the value.
+_tag { "key"::value }
