@@ -29,6 +29,9 @@ cod-tools (unreleased)
     - cif_fix_values:
       - looped temperature, density and refinement weighting scheme values
         no longer produce a malformed CIF file.
+    - codcif:
+      - correctly processing CIF2 table entry values starting with
+        colons (':').
     - COD::CIF::Tags::Manage:
       - preventing from creation of data blocks with disallowed names.
     - COD::DateTime:
